--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ body{
     box-sizing: border-box;
 }
 
+.inactive {
+    display: none !important;
+}
+
+
 .flex-container-column{
     display: flex;
     flex-direction: column;
@@ -26,7 +31,7 @@ body{
 
 .title{
     height: 20%;
-    font-size: 4rem;
+    font-size: 5rem;
     font-family: 'Lobster', cursive;
     color: #f2f1e9;
     opacity: 0;
@@ -35,6 +40,10 @@ body{
     animation-duration: 500ms;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
+}
+
+.blur{
+    filter: blur(20px) invert(60%);
 }
 
 #create{
@@ -58,7 +67,7 @@ body{
 
 
 .card{
-    width: 60%;
+    width: 45%;
     height: 65%;
     background-color: #f2f1e9;
     border: gray 2px;
@@ -70,15 +79,16 @@ body{
     animation-timing-function: ease-in-out;
 }
 
+
 #controlBar{
     width:60%;
     height: 15%;
 }
 
 #date{
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-family: 'Raleway', sans-serif;
-    font-weight: bold;
+
     color: #0b123b;
 }
 
@@ -92,6 +102,7 @@ body{
 .divideLine{
     width: 100%;
     height: 2px;
+    margin-bottom: 20px;
     background-color: #aeaaac;
 
 }
@@ -106,6 +117,10 @@ body{
 
 #forward{
     background-image: url("../res/forward.png");
+}
+
+#checked{
+    background-image: url("../res/checked.png");
 }
 
 .myButton{
@@ -166,6 +181,7 @@ body{
     animation-name: choose_journal;
     animation-duration: 1s;
     animation-fill-mode: forwards;
+    transform: scale(1.05);
 }
 
 .journal-flex-container{
@@ -176,9 +192,9 @@ body{
 }
 
 .journal-binding-side{
-    background-color: #517b8f;
-    height: 100%;
-    width: 10%;
+                   background-color: #517b8f;
+                   height: 100%;
+                   width: 10%;
 }
 
 .journal-title{
@@ -190,4 +206,44 @@ body{
     font-family: 'Raleway', sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
+}
+
+textarea{
+    height: 70%;
+    width: 80%;
+    border:0;
+    background-color: #f2f1e9;
+    font-size: xx-large;
+}
+
+#entry-text{
+    height: 100%;
+    width:80%;
+    font-size: 2rem;
+    font-family: 'Noto Sans TC', sans-serif;
+}
+
+#entry-edit{
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+
+#edit-card{
+    height: 500px;
+    width: 500px;
+    background-color: #f2f1e9;
+    border-radius: 5px;
+
+    animation-name: float-up;
+    animation-duration: 500ms;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+#card-date{
+    font-size: 2.5rem;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    color: #0b123b;
 }
