--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,15 +46,33 @@ body{
     filter: blur(20px) invert(60%);
 }
 
+#input-container{
+    height: auto;
+    width:min-content;
+    margin: 40px;
+}
+
+input{
+    text-align: center;
+    height: 60px;
+    width: max-content;
+    font-size: x-large;
+    border-radius: 30px 0 0 30px;
+    border: 0;
+    background-color: #fbfff8;
+    box-sizing: border-box;
+}
+
 #create{
-    font-size: 12pt;
+
+    font-size: 1.2rem;
     color: white;
     font-family: 'Roboto Condensed', sans-serif;
     height: 60px;
+    width: min-content;
     padding:  0 30px;
     background-color: #ff9a31;
-    box-shadow: #ff9a31 0px 0px 10px 0px;
-    border-radius: 30px;
+    border-radius: 0 30px 30px 0;
     border: 0;
 }
 
@@ -164,28 +182,28 @@ body{
 }
 
 @keyframes color_change {
-    0%{
-
-    }
     100%{
-        box-shadow: #ff9a31 0px 0px 30px 0px;
+        box-shadow: #ff9a31 0 0 30px 0;
     }
 }
 
 @keyframes choose_journal {
-    0%{
-
-    }
     100%{
-        box-shadow: #f2f1e9 0px 0px 30px 0px;
+        box-shadow: #000000 7px 5px 30px 0;
     }
+}
+
+#journal-container{
+    flex-wrap: wrap;
+    width: auto;
+    margin: 0 auto;
 }
 
 .journal{
     height: 200px;
     width: 180px;
     border-radius: 5px;
-    margin: 10% 15px;
+    margin: 15px 15px;
     background-color: #6bbfd1;
 }
 
@@ -204,15 +222,13 @@ body{
 }
 
 .journal-binding-side{
-                   background-color: #517b8f;
-                   height: 100%;
-                   width: 10%;
+    background-color: #517b8f;
+    height: 100%;
+    width: 10%;
 }
 
 .journal-title{
     margin: 30% auto;
-    padding: 5px;
-    border-radius: 5px;
     height: max-content;
     width: min-content;
     font-family: 'Raleway', sans-serif;
