--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,7 @@ input{
     height: 60px;
     width: max-content;
     font-size: x-large;
+    font-family: 'Noto Sans TC', sans-serif;
     border-radius: 30px 0 0 30px;
     border: 0;
     background-color: #fbfff8;
@@ -231,9 +232,8 @@ input{
     margin: 30% auto;
     height: max-content;
     width: min-content;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     font-size: 1.5rem;
-    font-weight: bold;
 }
 
 textarea{
