--- a/public/css/daily.css
+++ b/public/css/daily.css
@@ -46,44 +46,6 @@ body{
     filter: blur(20px) invert(60%);
 }
 
-#input-container{
-    height: auto;
-    width:min-content;
-    margin: 40px;
-}
-
-input{
-    text-align: center;
-    height: 60px;
-    width: max-content;
-    font-size: x-large;
-    font-family: 'Noto Sans TC', sans-serif;
-    border-radius: 30px 0 0 30px;
-    border: 0;
-    background-color: #fbfff8;
-    box-sizing: border-box;
-}
-
-#create{
-
-    font-size: 1.2rem;
-    color: white;
-    font-family: 'Roboto Condensed', sans-serif;
-    height: 60px;
-    width: min-content;
-    padding:  0 30px;
-    background-color: #ff9a31;
-    border-radius: 0 30px 30px 0;
-    border: 0;
-}
-
-#create:hover, #create:focus{
-    animation-name: color_change;
-    animation-duration: 300ms;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
-}
-
 
 .card{
     width: 45%;
@@ -107,7 +69,6 @@ input{
 #date{
     font-size: 2.5rem;
     font-family: 'Raleway', sans-serif;
-
     color: #0b123b;
 }
 
@@ -124,10 +85,6 @@ input{
     margin-bottom: 20px;
     background-color: #aeaaac;
 
-}
-
-#homeButton{
-    font-size: 1.5rem;
 }
 
 #back{
@@ -166,7 +123,6 @@ input{
     }
 }
 
-
 @keyframes float-up {
     0% {
         opacity: 0;
@@ -182,59 +138,8 @@ input{
     }
 }
 
-@keyframes color_change {
-    100%{
-        box-shadow: #ff9a31 0 0 30px 0;
-    }
-}
 
-@keyframes choose_journal {
-    100%{
-        box-shadow: #000000 7px 5px 30px 0;
-    }
-}
 
-#journal-container{
-    flex-wrap: wrap;
-    width: auto;
-    margin: 0 auto;
-}
-
-.journal{
-    height: 200px;
-    width: 180px;
-    border-radius: 5px;
-    margin: 15px 15px;
-    background-color: #6bbfd1;
-}
-
-.journal:hover{
-    animation-name: choose_journal;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    transform: scale(1.05);
-}
-
-.journal-flex-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.journal-binding-side{
-    background-color: #517b8f;
-    height: 100%;
-    width: 10%;
-}
-
-.journal-title{
-    margin: 30% auto;
-    height: max-content;
-    width: min-content;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 1.5rem;
-}
 
 textarea{
     height: 60%;
@@ -306,4 +211,19 @@ textarea{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #5c8b9c;
+}
+
+@media screen and (max-width:1000px){
+    .card{
+        width: 90%;
+        height: 75%;
+    }
+
+    #controlBar{
+        width:90%;
+    }
+
+    #edit-card{
+        width: 90%;
+    }
 }
